# market-risk-stress-testing-platform

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  project_specification.md  project_structure.md  roadmap.md
src/market_risk/: __init__.py
src/market_risk/data/: __init__.py  cache.py  exceptions.py  models.py  provider.py  yahoo.py
tests/: test_package.py
tests/integration/data/: test_yahoo_live.py
tests/unit/data/: test_cache.py  test_models.py  test_yahoo.py
