[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "market-risk-stress-testing-platform"
version = "0.1.0"
description = "End-to-end platform for portfolio market risk analysis, Value at Risk, Expected Shortfall, backtesting and stress testing."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Martim Félix" },
]
keywords = [
    "market-risk",
    "stress-testing",
    "value-at-risk",
    "expected-shortfall",
    "portfolio-analytics",
    "quantitative-finance",
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = []


[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]


[tool.hatch.build.targets.wheel]
packages = ["src/market_risk"]


[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]


[tool.ruff.lint]
select = [
    "B",
    "D",
    "E",
    "F",
    "I",
    "RUF",
    "SIM",
    "UP",
]


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


[tool.mypy]
python_version = "3.12"
files = ["src"]
mypy_path = "src"
strict = true
pretty = true
show_error_codes = true
warn_unreachable = true


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=market_risk",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]


[tool.coverage.run]
branch = true
source = ["market_risk"]


[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
